feat: anchor volta ending brackets to notes (issue #306)
- Relax creation validation so a volta's outer edges may be notes: drop
  the auto-inserted barline (remove PrecedingAction.INSERT_BARLINE), route
  a REPEAT_LEFT_RIGHT predecessor to EXTEND_SPAN, and remove the end-type gate
- Admit content-element anchors/ends in Ending.checkReplacement
- Compute note-edge bracket geometry from column extents: read the
  ElementColumn via a Function so left/right edges anchor to the glyph
- Import/export note-anchored and note-terminated endings via invisible
  left/right barlines, folding a last-note discontinue onto the end-of-line
  barline
- Add and reconcile ending tests across creation, invalidation, geometry,
  and MusicXML round-trip

Closes #306